# dali-view-example

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dalidemo.cpp
app/src/main/java/com/example/dalidemo/: DaliDemo.java
app/src/main/res/layout/: layout_main.xml
app/src/main/res/values/: strings.xml
